--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
           - name: Set Creds
             run: git config user.name "tyler.hadx@gmail.com" && git config user.email "tyler.hadx@gmail.com"
           - name: Deploy
-            run: |
-                    npm run deploy
+            working-directory: ./dakotatrophyadventures
+            run: npm run deploy
