--- a/dakotatrophyadventures/package.json
+++ b/dakotatrophyadventures/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "execa": "^6.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
