--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
             with:
               node-version: '12'
           - name: Install packages
+            working-directory: ./dakotatrophyadventures
             run: npm i
           - name: Set Creds
             run: git config user.name "tyler.hadx@gmail.com" && git config user.email "tyler.hadx@gmail.com"
