--- a/dakotatrophyadventures/package.json
+++ b/dakotatrophyadventures/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "~4.5.6",
     "babel-eslint": "^10.1.0",
     "deepmerge": "^4.2.2",
+    "execa": "latest",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.13",
