--- a/dakotatrophyadventures/package.json
+++ b/dakotatrophyadventures/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "execa":"^5.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
     "vuetify": "^2.6.0"
