--- a/dakotatrophyadventures/package.json
+++ b/dakotatrophyadventures/package.json
@@ -9,23 +9,25 @@
     "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "core-js": "^3.6.5",
+    "execa": "^5.1.1",
     "register-service-worker": "^1.7.1",
-    "execa":"^5.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.6",
+    "@vue/cli-plugin-babel": "^4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.6",
     "@vue/cli-plugin-pwa": "^4.5.15",
     "@vue/cli-service": "~4.5.6",
     "babel-eslint": "^10.1.0",
     "deepmerge": "^4.2.2",
-    "execa": "latest",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "execa": "latest",
     "sass": "^1.32.13",
     "sass-loader": "^10.2.1",
     "vue-cli-plugin-vuetify": "~2.4.6",
