--- a/dakotatrophyadventures/package.json
+++ b/dakotatrophyadventures/package.json
@@ -31,6 +31,7 @@
     "execa": "latest",
     "sass": "^1.32.13",
     "sass-loader": "^10.2.1",
+    "sitemap-webpack-plugin": "^1.1.1",
     "vue-cli-plugin-vuetify": "~2.4.6",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
