--- a/dakotatrophyadventures/package.json
+++ b/dakotatrophyadventures/package.json
@@ -32,7 +32,8 @@
     "sass-loader": "^13.3.3",
     "sitemap-webpack-plugin": "^1.1.1",
     "vue-cli-plugin-vuetify": "^2.5.8",
-    "vuetify-loader": "^1.9.2"
+    "vuetify-loader": "^1.9.2",
+    "webpack": "^5.105.2"
   },
   "eslintConfig": {
     "root": true,
